test: fixed MessageLogTest
Refs: XRDDEV-2687